commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.interfaces.conditionalrangeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.conditionalrangeformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 11672e06bb8f5014b2c195f1ab506775e081db16
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: adbf37a1ff2f9fade6040c521fa59df00758a369
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26233356"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980994"
 items:
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatUpdateData
-  summary: 更新数据的 ConditionalRangeFormat 对象，在"conditionalRangeFormat.set （{...}）"中使用的接口。
+  summary: 更新对 ConditionalRangeFormat 对象，用于数据接口"conditionalRangeFormat.set (<!-- -->{...}<!-- -->)".
   name: Excel.Interfaces.ConditionalRangeFormatUpdateData
   fullName: Excel.Interfaces.ConditionalRangeFormatUpdateData
   langs:
