--- a/docs/docs-ref-autogen/office/office.file.yml
+++ b/docs/docs-ref-autogen/office/office.file.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a36a3e7904f1cf7fa568e812e64131c5651e2fb2
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: e82f2f2061f28e9b3e091f19ca945a4ec36a9b6a
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26647347"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980966"
 items:
 - uid: office.Office.File
   summary: 表示与 Office 外接程序关联的文档文件。
@@ -36,7 +36,7 @@ items:
 - uid: office.Office.File.closeAsync
   summary: 关闭文档文件。
   remarks: >-
-    <table><tr><td>要求集</td><td>文件</td></tr></table>
+    <table><tr><td>要求集</td><td>File</td></tr></table>
 
 
     内存中不允许两个以上的文档；否则 Document.getFileAsync 操作将会失败。处理完文件后，使用 File.closeAsync 方法关闭文件。
@@ -47,7 +47,7 @@ items:
 
     <table> <tr> <th>属性</th> <th>用于...</th> </tr> <tr> <td>AsyncResult.value</td> <td>始终返回 undefined，因为没有要检索数据或对象。</td> </tr> <tr> <td>AsyncResult.status</td> <td>确定操作是成功还是失败。</td> </tr> <tr> <td>AsyncResult.error</td> <td>如果操作失败，则访问提供错误信息的 Error 对象。</td> </tr> <tr> <td>AsyncResult.asyncContext</td> <td>在 AsyncResult 对象中未经改动的返回的任何类型的用户定义项。</td> </tr> </table>
   name: closeAsync(callback)
-  fullName: closeAsync
+  fullName: closeAsync(callback)
   langs:
   - typeScript
   type: method
@@ -65,7 +65,7 @@ items:
 - uid: office.Office.File.getSliceAsync
   summary: 返回指定的切片。
   remarks: >-
-    <table><tr><td>要求集</td><td>文件</td></tr></table>
+    <table><tr><td>要求集</td><td>File</td></tr></table>
 
 
     在传递给 getSliceAsync 方法的回调函数，您可以使用 AsyncResult 对象的属性返回以下信息。
@@ -73,7 +73,7 @@ items:
 
     <table> <tr> <th>属性</th> <th>用于...</th> </tr> <tr> <td>AsyncResult.value</td> <td>访问 Slice 对象。</td> </tr> <tr> <td>AsyncResult.status</td> <td>确定操作是成功还是失败。</td> </tr> <tr> <td>AsyncResult.error</td> <td>如果操作失败，则访问提供错误信息的 Error 对象。</td> </tr> <tr> <td>AsyncResult.asyncContext</td> <td>在 AsyncResult 对象中未经改动的返回的任何类型的用户定义项。</td> </tr> </table>
   name: getSliceAsync(sliceIndex, callback)
-  fullName: getSliceAsync
+  fullName: getSliceAsync(sliceIndex, callback)
   langs:
   - typeScript
   type: method
@@ -94,7 +94,7 @@ items:
       - '(result: AsyncResult<Office.Slice>) => void'
 - uid: office.Office.File.size
   summary: 获取以字节为单位的文档文件大小。
-  remarks: <table><tr><td>要求集</td><td>文件</td></tr></table>
+  remarks: <table><tr><td>要求集</td><td>File</td></tr></table>
   name: size
   fullName: size
   langs:
