--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.tableupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.tableupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1cb4b90edfaaa1ae64368e7c39866bd559d59c57
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: af635cf97db76b5869353746a4fbceb811a553b8
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26228267"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980840"
 items:
 - uid: onenote.OneNote.Interfaces.TableUpdateData
-  summary: Table 对象，用于"table.set （{...}）"的数据更新接口。
+  summary: Table 对象，用于数据更新接口"table.set (<!-- -->{...}<!-- -->)".
   name: OneNote.Interfaces.TableUpdateData
   fullName: OneNote.Interfaces.TableUpdateData
   langs:
