--- a/docs/docs-ref-autogen/outlook_1_4/office.coerciontypeoptions.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.coerciontypeoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 522487ec7aa8fec8001c8d7b76477e506af4e580
-ms.sourcegitcommit: a68606173477c7fb4069880eea941766c7d8c50d
+ms.openlocfilehash: 67f2839165e9f22b420fdc58cd120eca7e949df4
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "29705092"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980868"
 items:
 - uid: Outlook_1_4.Office.CoercionTypeOptions
   name: Office.CoercionTypeOptions
@@ -25,4 +25,4 @@ items:
     content: 'coercionType?: Office.CoercionType;'
     return:
       type:
-      - office.Office.CoercionType
+      - Office.CoercionType
