--- a/docs/docs-ref-autogen/powerpoint.yml
+++ b/docs/docs-ref-autogen/powerpoint.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8d5a83fafd294666c9bc55d074ee77203ec635ba
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: e991f9f629cce48dccb4587d83e43eed37143808
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29384795"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29981001"
 items:
 - uid: powerpoint
   name: powerpoint
@@ -20,7 +20,7 @@ items:
 
 
     \[[API 集： PowerPointApi 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
-  name: createPresentation(base64File)
+  name: PowerPoint.createPresentation
   fullName: PowerPoint.createPresentation
   langs:
   - typeScript
