--- a/docs/docs-ref-autogen/excel/excel.interfaces.tablerowupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tablerowupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7205ea92f9d14a4261abb83fa105f26c4a698e95
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 352aa4b43f3d4afbe9eb97dd91723e364e6a1def
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26229338"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29981316"
 items:
 - uid: excel.Excel.Interfaces.TableRowUpdateData
-  summary: 更新数据的 TableRow 对象，在"tableRow.set （{...}）"中使用的接口。
+  summary: TableRow 对象，用于上的数据更新接口"tableRow.set (<!-- -->{...}<!-- -->)".
   name: Excel.Interfaces.TableRowUpdateData
   fullName: Excel.Interfaces.TableRowUpdateData
   langs:
