--- a/docs/docs-ref-autogen/outlook/office.organizer.yml
+++ b/docs/docs-ref-autogen/outlook/office.organizer.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: bc173ad7c31a71912cf01c3914794889919c5a11
-ms.sourcegitcommit: a68606173477c7fb4069880eea941766c7d8c50d
+ms.openlocfilehash: 9d9d64eb9cda5def21e1d90aef7fd29026fc5a23
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "29705323"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980959"
 items:
 - uid: outlook.Office.Organizer
   summary: >-
@@ -36,8 +36,21 @@ items:
 
 
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr></table>
+
+    ####示例
+
+
+    ```javascript
+
+    Office.context.mailbox.item.organizer.getAsync(
+        function(asyncResult) {
+            console.log(JSON.stringify(asyncResult));
+        }
+    );
+
+    ```
   name: getAsync(options, callback)
-  fullName: getAsync
+  fullName: getAsync(options, callback)
   langs:
   - typeScript
   type: method
@@ -51,7 +64,7 @@ items:
     - id: options
       description: 包含一个或多个以下属性的对象文本。 asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。
       type:
-      - office.Office.AsyncContextOptions
+      - Office.AsyncContextOptions
     - id: callback
       description: 该方法完成后，使用一个参数 asyncResult，即的 asyncResult 对象调用中的 callback 参数传递的函数。 `value`属性的结果是消息的组织者值，作为 EmailAddressDetails 对象。
       type:
