--- a/docs/docs-ref-autogen/outlook_1_2/office.customproperties.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.customproperties.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 12f896ce1777f5546db4b5e8017633d38861325a
-ms.sourcegitcommit: a68606173477c7fb4069880eea941766c7d8c50d
+ms.openlocfilehash: a50551d4c2ecea3adf8c8d701de22e49e7617b93
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "29704497"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29981358"
 items:
 - uid: Outlook_1_2.Office.CustomProperties
   summary: >-
@@ -39,7 +39,7 @@ items:
 
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr></table>
   name: get(name)
-  fullName: get
+  fullName: get(name)
   langs:
   - typeScript
   type: method
@@ -70,7 +70,7 @@ items:
 
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr></table>
   name: remove(name)
-  fullName: remove
+  fullName: remove(name)
   langs:
   - typeScript
   type: method
@@ -103,8 +103,68 @@ items:
 
 
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr></table>
+
+    ####示例
+
+
+    ```javascript
+
+    // The following JavaScript code sample shows how to asynchronously use
+
+    // the loadCustomPropertiesAsync method to load custom properties that
+
+    // are specific to the current item, and the saveAsync method to save
+
+    // these properties back to the server. After loading the custom properties,
+
+    // the code sample uses the get method to read the custom property myProp,
+
+    // the set method to write the custom property otherProp, and then finally
+
+    // calls the saveAsync method to save the custom properties.
+
+
+    // The initialize function is required for all add-ins.
+
+    Office.initialize = function () {
+        // Checks for the DOM to load using the jQuery ready function.
+        $(document).ready(function () {
+            // After the DOM is loaded, add-in-specific code can run.
+            var item = Office.context.mailbox.item;
+            item.loadCustomPropertiesAsync(customPropsCallback);
+        });
+    };
+
+
+    function customPropsCallback(asyncResult) {
+        var customProps = asyncResult.value;
+        var myProp = customProps.get("myProp");
+
+        customProps.set("otherProp", "value");
+        customProps.saveAsync(saveCallback);
+    }
+
+
+    function saveCallback(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Failed) {
+            write(asyncResult.error.message);
+        }
+        else {
+            // Async call to save custom properties completed.
+            // Proceed to do the appropriate for your add-in.
+        }
+    }
+
+
+    // Writes to a div with id='message' on the page.
+
+    function write(message) {
+        document.getElementById('message').innerText += message;
+    }
+
+    ```
   name: saveAsync(callback, asyncContext)
-  fullName: saveAsync
+  fullName: saveAsync(callback, asyncContext)
   langs:
   - typeScript
   type: method
@@ -145,7 +205,7 @@ items:
 
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr></table>
   name: set(name, value)
-  fullName: set
+  fullName: set(name, value)
   langs:
   - typeScript
   type: method
