--- a/docs/docs-ref-autogen/visio/visio.interfaces.shapeviewupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.shapeviewupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f0459176af41cf3081c30df66a5d508142b3999e
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 63d71f9cdc21affef3b620510cea734d2b00f109
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26222023"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29981008"
 items:
 - uid: visio.Visio.Interfaces.ShapeViewUpdateData
-  summary: 更新数据的 ShapeView 对象，在"shapeView.set （{...}）"中使用的接口。
+  summary: 更新对 ShapeView 对象，用于数据接口"shapeView.set (<!-- -->{...}<!-- -->)".
   name: Visio.Interfaces.ShapeViewUpdateData
   fullName: Visio.Interfaces.ShapeViewUpdateData
   langs:
